# gl_sprite_batch

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
libs/include/common/GL/: glxew.h
libs/lib/glfw/release/win32/x86_32/: glfw3.lib
libs/lib/libpng/debug/win32/x86_32/: libpng16.lib
libs/lib/libpng/release/win32/x86_32/: libpng16.lib
libs/lib/libpng/release/win32/x86_64/: libpng16_static.lib
libs/lib/zlib/debug/win32/x86_32/: zlib.lib  zlibstat.lib
libs/lib/zlib/release/win32/x86_32/: zlib.lib  zlibstat.lib
res/: win32_resources.rc
src/cpp/: main.cpp
src/cpp/assets/image/: PNGImage.cpp  PNGImage.hpp  PNGLoader.cpp  PNGLoader.hpp
src/cpp/assets/shader/: GLShader.cpp  GLShader.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp
src/cpp/assets/texture/: GLTexture2D.cpp  GLTexture2D.hpp
src/cpp/camera/: CameraViewport.hpp  GLCamera.cpp  GLCamera.hpp  GLCamera2D.cpp  GLCamera2D.hpp  ViewProjection.hpp
src/cpp/cfg/: glm.hpp  istream.hpp  map.hpp  memory.hpp  mutex.hpp  opengl.hpp  platform.hpp  string.hpp  vector.hpp
src/cpp/components/: Components.hpp  Position.hpp  Rotation.hpp  Scale.hpp  Velocity.hpp
src/cpp/objects/: GameObject.cpp  GameObject.hpp
src/cpp/objects/sprite/: Sprite.cpp  Sprite.hpp
src/cpp/physics/: Body.hpp
src/cpp/renderer/: GLRenderer.cpp  GLRenderer.hpp
src/cpp/renderer/batch/: BatchInfo.hpp  BatchRequest.hpp  Drawable.hpp
src/cpp/systems/: SpriteSystem.cpp  SpriteSystem.hpp
src/cpp/utils/color/: ColorTypes.hpp
src/cpp/utils/io/: Encoding.hpp  InputFile.cpp  InputFile.hpp  StreamMode.hpp
src/cpp/utils/log/: Log.cpp  Log.hpp
src/cpp/utils/random/: Random.cpp  Random.hpp
